# PhotoDetect

./: README.MD  docker-compose.yml  pyproject.toml
server/: .env.example  .gitignore  Dockerfile  pyproject.toml
server/src/adapters/api/: app.py  routes.py
server/src/adapters/database/: __init__.py  tables.py
server/src/application/: entities.py  services.py  utils.py
server/src/composites/: alembic_runner.py
src/adapters/api/: app.py  dependencies.py  routes.py  schemas.py
src/adapters/api/image/: routes.py
src/adapters/database/: repositories.py  sa_session.py  settings.py
src/adapters/database/alembic/: env.py
src/adapters/database/migrations/: 2024_03_18_20_21_09_create_images_and_detected_objects_.py
src/adapters/detect/: __init__.py  object_detect.py  settings.py
src/application/: constants.py  entities.py  exceptions.py  interfaces.py  services.py  utils.py
src/composites/: main.py
